--- a/base/gpu/openmpi4.1.0-cuda11.8-cudnn8-ubuntu22.04/Dockerfile
+++ b/base/gpu/openmpi4.1.0-cuda11.8-cudnn8-ubuntu22.04/Dockerfile
@@ -35,6 +35,10 @@ RUN apt-get update && \
     libssl3 \
     git && \
     # nccl-rdma-sharp-plugins dependencies
+    libpam-runtime \
+    libpam0g \
+    libpam-modules \
+    libpam-modules-bin \
     apt-get install -y \
     libsqlite3-0 \
     libnuma-dev \
