--- a/base/cpu/openmpi4.1.0-ubuntu22.04/Dockerfile
+++ b/base/cpu/openmpi4.1.0-ubuntu22.04/Dockerfile
@@ -20,6 +20,8 @@ RUN apt-get update && \
     openssh-server \
     curl \
     #Adding packages to mitigate vulnerabilities
+    login \
+    passwd \
     libpam-runtime \
     libpam0g \
     libpam-modules \
