--- a/base/gpu/openmpi4.1.0-cuda11.8-cudnn8-ubuntu22.04/Dockerfile
+++ b/base/gpu/openmpi4.1.0-cuda11.8-cudnn8-ubuntu22.04/Dockerfile
@@ -35,6 +35,12 @@ RUN apt-get update && \
     libssl3 \
     git && \
     # nccl-rdma-sharp-plugins dependencies
+    libuuid1 \
+    libblkid1 \
+    util-linux \
+    mount \
+    libmount1 \
+    libsmartcols1 \
     bash \
     login \
     passwd \
