Add `git` to `openmpi4.1.0-ubuntu22.04` image

--- a/base/cpu/openmpi4.1.0-ubuntu22.04/Dockerfile
+++ b/base/cpu/openmpi4.1.0-ubuntu22.04/Dockerfile
@@ -19,6 +19,7 @@ RUN apt-get update && \
     openssh-client \
     openssh-server \
     curl \
+    git \
     #Adding packages to mitigate vulnerabilities
     libuuid1 \
     libblkid1 \
